removed unused import in Module.java. removed unused test changes.