@@ -22,8 +22,6 @@
  *
  */
 
-package org.openjdk.zipfstest;
-
 import org.testng.annotations.*;
 
 import java.io.*;
@@ -49,7 +47,7 @@ import static org.testng.Assert.*;
  * @bug 8230870
  * @summary Test ZIP Filesystem behavior with ~64k entries
  * @modules jdk.zipfs
- * @run testng org.openjdk.zipfstest.LargeEntriesTest
+ * @run testng LargeEntriesTest
  */
 public class LargeEntriesTest {
 
@@ -449,18 +447,6 @@ public class LargeEntriesTest {
                 .collect(joining(", "));
     }
 
-    private static List<String> enableNativeAccessOptions() {
-        return List.of(
-            "--enable-native-access=ALL-UNNAMED/org.openjdk.zipfstest",
-            "--enable-native-access=jdk.internal.ed",
-            "--enable-native-access=jdk.internal.le",
-            "--enable-native-access=jdk.jdi",
-            "--enable-native-access=jdk.jshell",
-            "--enable-native-access=jdk.compiler",
-            "--enable-native-access=jdk.attach",
-            "--enable-native-access=jdk.jpackage");
-    }
-
     /**
      * Validates that a jar created using ZIP FS can be used by the java
      * tool to run a program specified in the Main-Class Manifest attribute
@@ -472,13 +458,9 @@ public class LargeEntriesTest {
     private static Result runJar(String jarFile) {
         String javaHome = System.getProperty("java.home");
         String java = Paths.get(javaHome, "bin", "java").toString();
-        List<String> cmds = new ArrayList();
-        cmds.add(java);
-        cmds.addAll(enableNativeAccessOptions());
-        cmds.add("-jar");
-        cmds.add(jarFile);
+        String[] cmd = {java, "-jar", jarFile};
         String output;
-        ProcessBuilder pb = new ProcessBuilder(cmds);
+        ProcessBuilder pb = new ProcessBuilder(cmd);
         Process p;
         try {
             p = pb.start();
